feat: finalizado funcionalidades do followup